deploy-emptydir.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: test-deploy
  labels:
    type: deploy
  namespace: dev
spec: ## specific to RC
  replicas: 4 ## no of pod to create 
  selector:
    matchLabels:
      type: web 
  template: #### The below statements belongs to pod.
    metadata:
      name: mypod
      labels:
        type: web 
    spec: ## specific to pod 
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: test-vol
          mountPath: /project
      volumes:
      - name: test-vol
        emptyDir:
          sizeLimit: 500Mi
