deploy-private-2.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: test-deploy-pvt-repo
  labels:
    type: deploy
spec: ## specific to RC
  replicas: 1 ## no of pod to create 
  selector:
    matchLabels:
      type: web 
  template: #### The below statements belongs to pod.
    metadata:
      name: mypod
      labels:
        type: web 
    spec: ## specific to pod 
      containers:
      - name: httpd
        image: 897276212041.dkr.ecr.us-west-2.amazonaws.com/devops17-java:v6
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
