deploy-private.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: test-deploy
  labels:
    type: deploy
  namespace: dev
spec: ## specific to RC
  replicas: 1 ## no of pod to create 
  selector:
    matchLabels:
      type: web 
  template: #### The below statements belongs to pod.
    metadata:
      name: mypod
      labels:
        type: web 
    spec: ## specific to pod 
      containers:
      - name: httpd
        image: malleshdevops/devopseks17:reactjs-v2
        ports:
        - containerPort: 80
