deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: test-deploy
  labels:
    type: deploy
spec: ## specific to RC
  replicas: 1 ## no of pod to create 
  selector:
    matchLabels:
      type: web 
  template: #### The below statements belongs to pod.
    metadata:
      name: mypod
      labels:
        type: web 
    spec: ## specific to pod 
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 900m
          requests:
            cpu: 500m
