multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-multi-container
  labels:
    purpose: demo
    type: webserver
    types: apply
spec:
  containers:
  - name: httpd
    image: httpd:2.4
    ports:
    - containerPort: 80
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
