petclinc.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: petclinic-1
  labels:
    type: deploy
      #  namespace: dev
spec: ## specific to RC
  replicas: 1 ## no of pod to create 
  selector:
    matchLabels:
      type: web 
  template: #### The below statements belongs to pod.
    metadata:
      name: mypod
      labels:
        type: web 
    spec: ## specific to pod 
      containers:
      - name: httpd
        image: tomcat:9
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: test-config-vol
          mountPath: /tmp/tomcat-users.xml
            #subPath: tomcat-users.xml
      volumes:
        - name: test-config-vol
          configMap:
            name: test-config
