pod-empty.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - name: test-vol
      mountPath: /devops
  volumes:
  - name: test-vol 
    emptyDir: {}
