pod-node-name.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-node-name
  labels:
    type: create
spec:
  containers:
  - name: httpd
    image: httpd:2.4
    ports:
    - containerPort: 80
  nodeName: ip-10-0-2-123.us-west-2.compute.internal
