pod-node-selector-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-node-selector-fail
  labels:
    type: create
spec:
  containers:
  - name: httpd
    image: httpd:2.4
    ports:
    - containerPort: 80
  nodeSelector:
    name: devops
