pod-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-node-selector
  labels:
    type: create
spec:
  containers:
  - name: httpd
    image: httpd:2.4
    ports:
    - containerPort: 80
  nodeSelector:
    tier: web
