pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    type: create
spec:
  containers:
  - name: httpd
    image: httpd:2.4
    ports:
    - containerPort: 80
    volumeMounts:
    - name: test-pvc
      mountPath: /var/www/html
  volumes:
  - name: test-pvc
    persistentVolumeClaim:
      claimName: ebs-claim
