pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    type: create
spec:
  containers:
  - name: httpd
    image: httpd:2.4
    ports:
    - containerPort: 80
