dogs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doggie-web
  labels:
    app.kubernetes.io/name: doggie-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: doggie-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: doggie-web
    spec:
      containers:
        - name: doggie-container
          image: learncloudnative/dogpic-service:0.1.0
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: doggie-service
  labels:
    app.kubernetes.io/name: doggie-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: doggie-web
  ports:
    - port: 3000
      name: http
