httpd-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-lb
spec:
 type: LoadBalancer
 selector:
   type: web
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30007
