httpd-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-nlb-ip
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
 type: LoadBalancer
 loadBalancerClass: service.k8s.aws/nlb
 selector:
   type: web
 ports:
 - port: 80
   targetPort: 80
