httpd-nodeport-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-nodeport-1
spec:
 type: NodePort
 selector:
   type: web
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30006
