httpd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-nodeport
spec:
 type: NodePort
 selector:
   type: web
 ports:
 - port: 80
   targetPort: 80
