httpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
 selector:
   type: web
 ports:
 - port: 80
   targetPort: 80
